--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta confirm="partners-house-190191"/>
     <script src="https://fpyf8.com/88/tag.min.js" data-zone="179258" async data-cfasync="false"></script>
     <title>Gamenda - Your Game Universe</title>
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
@@ -335,4 +336,5 @@
     </script>
 </body>
 </html>
+
 
