--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--partners-house-->
     <meta confirm="partners-house-190191"/>
+    <script type="text/javascript" src="https://hotblikawo.today/process.js?id=1505839611&p1=sub1&p2=sub2&p3=sub3&p4=sub4" async> </script> <!--webpush-->
+    <script type="text/javascript" src="https://hotblikawo.today/process.js?id=1505839611&p1=sub1&p2=sub2&p3=sub3&p4=sub4" async> </script> <!--inpage-->
+     <!--monetag-->
     <script src="https://fpyf8.com/88/tag.min.js" data-zone="179258" async data-cfasync="false"></script>
     <title>Gamenda - Your Game Universe</title>
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
@@ -336,5 +340,6 @@
     </script>
 </body>
 </html>
+
 
 
